--- a/net-libs/gtk-vnc/ChangeLog
+++ b/net-libs/gtk-vnc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/gtk-vnc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gtk-vnc/ChangeLog,v 1.96 2012/10/04 14:59:46 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gtk-vnc/ChangeLog,v 1.97 2012/10/07 01:30:04 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gtk-vnc-0.5.1.ebuild:
+  stable ppc64, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gtk-vnc-0.5.1.ebuild:
   Stable for amd64, wrt bug #427544
