--- a/gnome-extra/libgsf/ChangeLog
+++ b/gnome-extra/libgsf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/libgsf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgsf/ChangeLog,v 1.206 2012/10/06 09:27:03 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgsf/ChangeLog,v 1.207 2012/10/07 01:31:23 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> libgsf-1.14.23.ebuild:
+  stable ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> libgsf-1.14.23.ebuild:
   arm stable, bug #427544
