--- a/media-fonts/cantarell/ChangeLog
+++ b/media-fonts/cantarell/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/cantarell
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/cantarell/ChangeLog,v 1.23 2012/10/06 09:28:03 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/cantarell/ChangeLog,v 1.24 2012/10/07 01:36:55 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> cantarell-0.0.9.ebuild:
+  stable ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> cantarell-0.0.9.ebuild:
   arm stable, bug #427544
