--- a/dev-python/tracing/ChangeLog
+++ b/dev-python/tracing/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/tracing
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/tracing/ChangeLog,v 1.2 2012/10/06 23:21:46 mschiff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/tracing/ChangeLog,v 1.3 2012/10/07 01:37:14 mschiff Exp $
+
+  07 Oct 2012; Marc Schiffbauer <mschiff@gentoo.org> tracing-0.7.ebuild:
+  Fix build
 
 *tracing-0.7 (06 Oct 2012)
 
@@ -12,4 +15,3 @@
   15 Jun 2012; Marc Schiffbauer <mschiff@gentoo.org> +tracing-0.6.ebuild,
   +metadata.xml:
   Initial commit of tracing.
-
