--- a/app-text/iso-codes/ChangeLog
+++ b/app-text/iso-codes/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/iso-codes
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/ChangeLog,v 1.127 2012/10/06 08:45:28 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/ChangeLog,v 1.128 2012/10/07 01:38:27 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> iso-codes-3.37.ebuild:
+  stable ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> iso-codes-3.37.ebuild:
   arm stable, bug #427544
