--- a/net-libs/gupnp/ChangeLog
+++ b/net-libs/gupnp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/gupnp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gupnp/ChangeLog,v 1.52 2012/10/04 15:00:03 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gupnp/ChangeLog,v 1.53 2012/10/07 01:40:30 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gupnp-0.18.3.ebuild:
+  stable ppc64, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gupnp-0.18.3.ebuild:
   Stable for amd64, wrt bug #427544
