--- a/dev-cpp/glibmm/ChangeLog
+++ b/dev-cpp/glibmm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/glibmm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/glibmm/ChangeLog,v 1.190 2012/10/06 08:57:49 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/glibmm/ChangeLog,v 1.191 2012/10/07 01:52:11 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> glibmm-2.32.1.ebuild:
+  stable ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> glibmm-2.32.1.ebuild:
   arm stable, bug #427544
@@ -698,4 +701,3 @@
 
   09 May 2004; Yi Qiang <khai@gentoo.org> +glibmm-2.4.1.ebuild:
   Introduced into portage, dependency of gtkmm-2.4.
-
