--- a/dev-cpp/gtkmm/ChangeLog
+++ b/dev-cpp/gtkmm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/gtkmm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gtkmm/ChangeLog,v 1.235 2012/10/06 09:10:05 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gtkmm/ChangeLog,v 1.236 2012/10/07 02:00:52 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gtkmm-3.4.0.ebuild:
+  stable ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> gtkmm-3.4.0.ebuild:
   arm stable, bug #427544
