--- a/gnome-extra/gtkhtml/ChangeLog
+++ b/gnome-extra/gtkhtml/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/gtkhtml
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gtkhtml/ChangeLog,v 1.261 2012/10/06 09:24:52 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gtkhtml/ChangeLog,v 1.262 2012/10/07 02:02:09 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gtkhtml-4.4.3.ebuild:
+  stable ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> gtkhtml-4.4.3.ebuild:
   arm stable, bug #427544
