--- a/gnome-base/gvfs/ChangeLog
+++ b/gnome-base/gvfs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gvfs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.187 2012/10/06 09:21:36 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.188 2012/10/07 01:59:36 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gvfs-1.12.3.ebuild:
+  stable ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> gvfs-1.12.3.ebuild:
   arm stable, bug #427544
@@ -745,4 +748,3 @@
   Initial import of GVFS - the new Virtual Filesystem layer used by GNOME-2.22
   and any other glib-2.16 GIO API using application for seamless remote
   filesystem access and more
-
