--- a/gnome-base/libgdu/ChangeLog
+++ b/gnome-base/libgdu/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/libgdu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgdu/ChangeLog,v 1.7 2012/10/06 09:22:36 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libgdu/ChangeLog,v 1.8 2012/10/07 01:57:58 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> libgdu-3.0.2.ebuild:
+  stable ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> libgdu-3.0.2.ebuild:
   arm stable, bug #427544
@@ -29,4 +32,3 @@
   New ebuild for gnome-disk-utility's libraries. Split out of
   gnome-disk-utility for use by gvfs since gnome-disk-utility-3.4 no longer
   provides them.
-
