--- a/dev-libs/gmime/ChangeLog
+++ b/dev-libs/gmime/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/gmime
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/ChangeLog,v 1.206 2012/10/06 09:12:17 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/ChangeLog,v 1.207 2012/10/07 02:05:47 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gmime-2.6.10.ebuild:
+  stable ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> gmime-2.6.10.ebuild:
   arm stable, bug #427544
@@ -855,4 +858,3 @@
   Initial version. Ebuild submitted by Torsten Stets
   <mai98bmg@studserv.uni-leipzig.de> and tove <bugs@veller.net>. Closes
   #57197.
-
