--- a/app-accessibility/at-spi2-core/ChangeLog
+++ b/app-accessibility/at-spi2-core/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-accessibility/at-spi2-core
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/at-spi2-core/ChangeLog,v 1.14 2012/10/06 09:49:11 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/at-spi2-core/ChangeLog,v 1.15 2012/10/07 02:28:22 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  at-spi2-core-2.4.2.ebuild, at-spi2-core-2.6.0.ebuild:
+  keyword ~ppc64, bug #411761
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> at-spi2-core-2.2.3.ebuild:
   arm stable, bug #427544
@@ -73,4 +77,3 @@
   +files/at-spi2-core-2.0.2-abort-if-already-running.patch,
   +files/at-spi2-core-2.0.2-disable-teamspaces-test.patch, +metadata.xml:
   Move from gnome overlay for GNOME 3
-
