--- a/profiles/arch/powerpc/ChangeLog
+++ b/profiles/arch/powerpc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo/PPC profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/powerpc/ChangeLog,v 1.188 2012/09/27 09:57:42 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/powerpc/ChangeLog,v 1.189 2012/10/07 02:31:08 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> package.use.mask:
+  remove net-libs/webkit-gtk[geoloc,webkit2] masking since app-misc/geoclue and
+  app-accessibility/at-spi2-core are keyworded
 
   27 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> package.use.mask:
   Mask USE="test" for dev-ruby/rack-test because dev-ruby/sinatra it relies has
