--- a/gnome-extra/nm-applet/ChangeLog
+++ b/gnome-extra/nm-applet/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/nm-applet
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nm-applet/ChangeLog,v 1.82 2012/09/13 09:54:36 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nm-applet/ChangeLog,v 1.83 2012/10/07 07:53:47 pacho Exp $
+
+  07 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
+  Drop maintainer as talked with him.
 
 *nm-applet-0.9.6.2 (13 Sep 2012)
 
@@ -385,4 +388,3 @@
   +nm-applet-0.6.5.ebuild:
   New upstream release of NetworkManager, splits out the gnome applet, which
   became this package.
-
