--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.428 2012/10/03 22:47:12 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.429 2012/10/07 08:29:49 mgorny Exp $
+
+  07 Oct 2012; Michał Górny <mgorny@gentoo.org> boost-utils.eclass:
+  Fix stupid mistake in boost-utils_get_best_slot().
 
   03 Oct 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
   virtualx.eclass:
