--- a/dev-vcs/rapidsvn/ChangeLog
+++ b/dev-vcs/rapidsvn/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-vcs/rapidsvn
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/rapidsvn/ChangeLog,v 1.15 2012/08/10 07:04:07 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/rapidsvn/ChangeLog,v 1.16 2012/10/07 09:00:10 pacho Exp $
+
+  07 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
+  Drop maintainer due retirement, #24135.
 
   10 Aug 2012; Justin Lecher <jlec@gentoo.org> rapidsvn-0.12.1_pre8247.ebuild:
   Install missing icons, #430648
@@ -375,4 +378,3 @@
 
   19 Aug 2003; <iggy@gentoo.org> metadata.xml, rapidsvn-0.2.0.ebuild:
   new package, fixes bug 25422, thanks to keanu@keanu.be
-
