--- a/sys-apps/dmtcp/ChangeLog
+++ b/sys-apps/dmtcp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/dmtcp
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dmtcp/ChangeLog,v 1.3 2011/05/03 08:30:18 nerdboy Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dmtcp/ChangeLog,v 1.4 2012/10/07 09:13:43 pacho Exp $
+
+  07 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
+  Drop maintainer due retirement, #24135.
 
   03 May 2011; Steve Arnold <nerdboy@gentoo.org> dmtcp-1.2.1.ebuild:
   Removed extra testiness, some failures appear to be expected.
@@ -15,4 +18,3 @@
   +metadata.xml:
   New ebuild for the Distributed MultiThreaded CheckPoint tool. It does 
   not require any special source mods or kernel modules. See the docs...
-
