--- a/dev-db/libdbi/ChangeLog
+++ b/dev-db/libdbi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/libdbi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/libdbi/ChangeLog,v 1.47 2012/10/05 18:09:38 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/libdbi/ChangeLog,v 1.48 2012/10/07 09:28:06 nixnut Exp $
+
+  07 Oct 2012; nixnut <nixnut@gentoo.org> libdbi-0.8.4.ebuild:
+  ppc stable #425306
 
   05 Oct 2012; Brent Baude <ranger@gentoo.org> libdbi-0.8.4.ebuild:
   Marking libdbi-0.8.4 ppc64 for bug 425306
