--- a/dev-python/python-distutils-extra/ChangeLog
+++ b/dev-python/python-distutils-extra/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/python-distutils-extra
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-distutils-extra/ChangeLog,v 1.15 2012/09/12 12:21:17 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-distutils-extra/ChangeLog,v 1.16 2012/10/07 09:33:52 nixnut Exp $
+
+  07 Oct 2012; nixnut <nixnut@gentoo.org> python-distutils-extra-2.33.ebuild:
+  ppc stable #429036
 
   12 Sep 2012; Johannes Huber <johu@gentoo.org>
   python-distutils-extra-2.33.ebuild:
