--- a/sys-apps/dmtcp/ChangeLog
+++ b/sys-apps/dmtcp/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/dmtcp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dmtcp/ChangeLog,v 1.4 2012/10/07 09:13:43 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dmtcp/ChangeLog,v 1.5 2012/10/07 09:35:32 pacho Exp $
+
+*dmtcp-1.2.6 (07 Oct 2012)
+
+  07 Oct 2012; Pacho Ramos <pacho@gentoo.org> +dmtcp-1.2.6.ebuild:
+  Version bump as current version doesn't compile for a long time (#367687).
 
   07 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Drop maintainer due retirement, #24135.
