--- a/app-admin/pwcrypt/ChangeLog
+++ b/app-admin/pwcrypt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/pwcrypt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/pwcrypt/ChangeLog,v 1.16 2012/10/06 12:23:09 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/pwcrypt/ChangeLog,v 1.17 2012/10/07 09:39:20 nixnut Exp $
+
+  07 Oct 2012; nixnut <nixnut@gentoo.org> pwcrypt-1.2.2-r1.ebuild:
+  ppc stable #436774
 
   06 Oct 2012; Agostino Sarubbo <ago@gentoo.org> pwcrypt-1.2.2-r1.ebuild:
   Stable for amd64, wrt bug #436774
