--- a/www-apps/mantisbt/ChangeLog
+++ b/www-apps/mantisbt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/mantisbt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/mantisbt/ChangeLog,v 1.117 2012/09/28 09:48:27 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/mantisbt/ChangeLog,v 1.118 2012/10/08 08:10:48 nativemad Exp $
+
+  08 Oct 2012; Andreas Schuerch <nativemad@gentoo.org> mantisbt-1.2.11.ebuild:
+  x86 stable, see bug 420375
 
   28 Sep 2012; Agostino Sarubbo <ago@gentoo.org> mantisbt-1.2.11.ebuild:
   Stable for amd64, wrt bug #420375
