--- a/media-sound/clementine/ChangeLog
+++ b/media-sound/clementine/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/clementine
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/clementine/ChangeLog,v 1.65 2012/07/07 08:04:43 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/clementine/ChangeLog,v 1.66 2012/10/08 09:58:20 pinkbyte Exp $
+
+  08 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> clementine-1.0.1-r2.ebuild:
+  Supress debug output when USE='debug' is not set wrt bug #433098. Thanks to
+  Michael Niggli for discovering this issue and Nikoli for solving it
 
   07 Jul 2012; Samuli Suominen <ssuominen@gentoo.org>
   -clementine-0.7.1-r2.ebuild, -files/clementine-0.7.1-fix-devicekit.patch:
