--- a/media-sound/clementine/ChangeLog
+++ b/media-sound/clementine/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/clementine
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/clementine/ChangeLog,v 1.66 2012/10/08 09:58:20 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/clementine/ChangeLog,v 1.67 2012/10/08 10:00:17 pinkbyte Exp $
+
+  08 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> clementine-1.0.1-r2.ebuild:
+  Add missing debug USE flag wrt bug #433098
 
   08 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> clementine-1.0.1-r2.ebuild:
   Supress debug output when USE='debug' is not set wrt bug #433098. Thanks to
