--- a/net-misc/connect/ChangeLog
+++ b/net-misc/connect/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/connect
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/connect/ChangeLog,v 1.9 2012/10/03 10:31:04 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/connect/ChangeLog,v 1.10 2012/10/08 11:08:10 nativemad Exp $
+
+  08 Oct 2012; Andreas Schuerch <nativemad@gentoo.org> connect-100.ebuild:
+  x86 stable, see bug 384471
 
   03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> connect-100.ebuild:
   Stable for amd64, wrt bug #384471
