--- a/net-analyzer/sflowtool/ChangeLog
+++ b/net-analyzer/sflowtool/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/sflowtool
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sflowtool/ChangeLog,v 1.31 2012/10/03 10:14:38 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sflowtool/ChangeLog,v 1.32 2012/10/08 11:41:24 jer Exp $
+
+  08 Oct 2012; Jeroen Roovers <jer@gentoo.org> sflowtool-3.28.ebuild:
+  Add USE=debug.
 
 *sflowtool-3.28 (03 Oct 2012)
 
