--- a/net-analyzer/sflowtool/ChangeLog
+++ b/net-analyzer/sflowtool/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/sflowtool
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sflowtool/ChangeLog,v 1.32 2012/10/08 11:41:24 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sflowtool/ChangeLog,v 1.33 2012/10/08 12:02:06 ago Exp $
+
+  08 Oct 2012; Agostino Sarubbo <ago@gentoo.org> sflowtool-3.27.ebuild:
+  Stable for amd64, wrt bug #437606
 
   08 Oct 2012; Jeroen Roovers <jer@gentoo.org> sflowtool-3.28.ebuild:
   Add USE=debug.
