--- a/app-arch/rpm2targz/ChangeLog
+++ b/app-arch/rpm2targz/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/rpm2targz
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm2targz/ChangeLog,v 1.91 2012/09/30 11:17:14 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm2targz/ChangeLog,v 1.92 2012/10/08 12:02:28 ago Exp $
+
+  08 Oct 2012; Agostino Sarubbo <ago@gentoo.org> rpm2targz-9.0.0.5g.ebuild:
+  Stable for amd64, wrt bug #433183
 
   30 Sep 2012; Ulrich Müller <ulm@gentoo.org> rpm2targz-9.0.0.3g.ebuild,
   rpm2targz-9.0.0.4g.ebuild, rpm2targz-9.0.0.5g.ebuild:
