--- a/dev-ml/lwt/ChangeLog
+++ b/dev-ml/lwt/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ml/lwt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/lwt/ChangeLog,v 1.21 2012/09/09 16:06:15 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/lwt/ChangeLog,v 1.22 2012/10/08 12:06:52 aballier Exp $
+
+*lwt-2.4.2 (08 Oct 2012)
+
+  08 Oct 2012; Alexis Ballier <aballier@gentoo.org> +lwt-2.4.2.ebuild:
+  version bump
 
 *lwt-2.4.1 (09 Sep 2012)
 
