--- a/dev-libs/libnl/ChangeLog
+++ b/dev-libs/libnl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libnl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libnl/ChangeLog,v 1.101 2012/09/30 17:29:07 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libnl/ChangeLog,v 1.102 2012/10/08 12:14:11 pinkbyte Exp $
+
+  08 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> libnl-3.2.13.ebuild:
+  Add missing media-gfx/graphviz dependency
 
   30 Sep 2012; Jeroen Roovers <jer@gentoo.org> -libnl-1.1-r2.ebuild:
   Old.
