--- a/dev-libs/libnl/ChangeLog
+++ b/dev-libs/libnl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libnl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libnl/ChangeLog,v 1.102 2012/10/08 12:14:11 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libnl/ChangeLog,v 1.103 2012/10/08 12:16:32 pinkbyte Exp $
+
+  08 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> libnl-3.2.13.ebuild:
+  Stable on amd64 wrt bug #437022
 
   08 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> libnl-3.2.13.ebuild:
   Add missing media-gfx/graphviz dependency
