--- a/dev-ml/findlib/ChangeLog
+++ b/dev-ml/findlib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ml/findlib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/findlib/ChangeLog,v 1.93 2012/09/29 18:37:34 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/findlib/ChangeLog,v 1.94 2012/10/08 12:18:54 aballier Exp $
+
+  08 Oct 2012; Alexis Ballier <aballier@gentoo.org> -findlib-1.2.7.ebuild,
+  -findlib-1.3.1.ebuild:
+  remove old
 
   29 Sep 2012; Raúl Porcel <armin76@gentoo.org> findlib-1.3.3.ebuild:
   alpha/ia64/sparc stable wrt #433237
