--- a/media-sound/leechcraft-hotstreams/ChangeLog
+++ b/media-sound/leechcraft-hotstreams/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/leechcraft-hotstreams
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/leechcraft-hotstreams/ChangeLog,v 1.3 2012/10/08 15:15:39 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/leechcraft-hotstreams/ChangeLog,v 1.4 2012/10/08 15:50:50 pinkbyte Exp $
+
+  08 Oct 2012; Sergey Popov <pinkbyte@gentoo.org>
+  leechcraft-hotstreams-0.5.85.ebuild:
+  Bump LeechCraft to 0.5.85, thanks to 0xd34df00d
 
 *leechcraft-hotstreams-0.5.85 (08 Oct 2012)
 
@@ -17,4 +21,3 @@
   04 Sep 2012; Sergey Popov <pinkbyte@gentoo.org>
   +leechcraft-hotstreams-9999.ebuild, +metadata.xml:
   Add media-sound/leechcraft-hotstreams, thanks to 0xd34df00d
-
