--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7018 2012/10/07 17:58:27 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7019 2012/10/08 16:09:16 floppym Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  08 Oct 2012; Mike Gilbert <floppym@gentoo.org> desc/python_targets.desc:
+  Add python3_3.
 
   07 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   +arch/amd64/x32/package.mask, +arch/amd64/x32/package.use.mask:
