--- a/profiles/base/ChangeLog
+++ b/profiles/base/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo base-profile
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.442 2012/10/02 18:27:07 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.443 2012/10/08 16:13:50 floppym Exp $
+
+  08 Oct 2012; Mike Gilbert <floppym@gentoo.org> use.mask:
+  Mask python_targets_python3_3.
 
   02 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> package.use.mask:
   Mask <gnome-base/gvfs-1.12.3-r1[udisks] for stabilization bug #427544,
