--- a/app-text/dvisvgm/ChangeLog
+++ b/app-text/dvisvgm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/dvisvgm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/dvisvgm/ChangeLog,v 1.34 2012/05/09 17:21:03 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/dvisvgm/ChangeLog,v 1.35 2012/10/08 17:00:21 radhermit Exp $
+
+  08 Oct 2012; Tim Harder <radhermit@gentoo.org> dvisvgm-1.0.8.ebuild,
+  +files/dvisvgm-1.0.8-as-needed.patch:
+  Fix as-needed linking issue (bug #431780 by Arttu Valo).
 
   09 May 2012; Alexis Ballier <aballier@gentoo.org> dvisvgm-1.0.11.ebuild:
   keyword ~amd64-fbsd
