--- a/app-text/dvisvgm/ChangeLog
+++ b/app-text/dvisvgm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/dvisvgm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/dvisvgm/ChangeLog,v 1.35 2012/10/08 17:00:21 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/dvisvgm/ChangeLog,v 1.36 2012/10/08 17:57:12 radhermit Exp $
+
+  08 Oct 2012; Tim Harder <radhermit@gentoo.org> -dvisvgm-1.0.9-r1.ebuild,
+  -dvisvgm-1.0.10.ebuild:
+  Remove old.
 
   08 Oct 2012; Tim Harder <radhermit@gentoo.org> dvisvgm-1.0.8.ebuild,
   +files/dvisvgm-1.0.8-as-needed.patch:
