--- a/app-text/dvisvgm/ChangeLog
+++ b/app-text/dvisvgm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/dvisvgm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/dvisvgm/ChangeLog,v 1.36 2012/10/08 17:57:12 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/dvisvgm/ChangeLog,v 1.37 2012/10/08 18:07:47 radhermit Exp $
+
+  08 Oct 2012; Tim Harder <radhermit@gentoo.org> dvisvgm-1.0.11.ebuild:
+  Drop keywords for arches that still need to keyword potrace for bug #390671.
 
   08 Oct 2012; Tim Harder <radhermit@gentoo.org> -dvisvgm-1.0.9-r1.ebuild,
   -dvisvgm-1.0.10.ebuild:
