--- a/net-libs/c-client/ChangeLog
+++ b/net-libs/c-client/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/c-client
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/c-client/ChangeLog,v 1.90 2012/07/11 19:04:50 eras Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/c-client/ChangeLog,v 1.91 2012/10/08 18:43:15 robbat2 Exp $
+
+*c-client-2007f-r3 (08 Oct 2012)
+
+  08 Oct 2012; Robin H. Johnson <robbat2@gentoo.org> +c-client-2007f-r3.ebuild:
+  Add in IPv6 and Kerberos support from uw-imap.
 
   11 Jul 2012; Eray Aslan <eras@gentoo.org> -c-client-2007f.ebuild:
   Remove old
