--- a/x11-plugins/pidgin-gpg/ChangeLog
+++ b/x11-plugins/pidgin-gpg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/pidgin-gpg
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/pidgin-gpg/ChangeLog,v 1.3 2012/10/08 18:38:16 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/pidgin-gpg/ChangeLog,v 1.4 2012/10/08 18:48:30 pinkbyte Exp $
+
+  08 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> pidgin-gpg-0.9.ebuild:
+  Remove unneeded libtool files
 
   08 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> pidgin-gpg-0.9.ebuild:
   Fix SRC_URI
