--- a/net-libs/libbtbb/ChangeLog
+++ b/net-libs/libbtbb/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libbtbb
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libbtbb/ChangeLog,v 1.7 2012/07/11 21:42:13 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libbtbb/ChangeLog,v 1.8 2012/10/08 19:01:54 zerochaos Exp $
+
+*libbtbb-2012.10.1 (08 Oct 2012)
+
+  08 Oct 2012; Rick Farina <zerochaos@gentoo.org> +libbtbb-2012.10.1.ebuild,
+  metadata.xml:
+  bump and add wireshark plugin
 
   11 Jul 2012; Rick Farina <zerochaos@gentoo.org>
   -files/wireshark-1.8-btbb.patch, -libbtbb-0.8-r1.ebuild, libbtbb-0.8.ebuild,
