--- a/net-libs/libbtbb/ChangeLog
+++ b/net-libs/libbtbb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libbtbb
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libbtbb/ChangeLog,v 1.8 2012/10/08 19:01:54 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libbtbb/ChangeLog,v 1.9 2012/10/08 19:09:35 zerochaos Exp $
+
+  08 Oct 2012; Rick Farina <zerochaos@gentoo.org> libbtbb-9999.ebuild:
+  fixing live ebuild to match release
 
 *libbtbb-2012.10.1 (08 Oct 2012)
 
