--- a/profiles/base/ChangeLog
+++ b/profiles/base/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo base-profile
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.443 2012/10/08 16:13:50 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.444 2012/10/08 20:18:30 johu Exp $
+
+  08 Oct 2012; Johannes Huber <johu@gentoo.org> package.use.mask:
+  Remove mask on net-libs/telepathy-qt[farstream] as required dep is stable
+  now.
 
   08 Oct 2012; Mike Gilbert <floppym@gentoo.org> use.mask:
   Mask python_targets_python3_3.
