--- a/net-analyzer/sinfo/ChangeLog
+++ b/net-analyzer/sinfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/sinfo
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sinfo/ChangeLog,v 1.13 2012/10/08 20:16:45 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sinfo/ChangeLog,v 1.14 2012/10/08 20:21:44 radhermit Exp $
+
+  08 Oct 2012; Tim Harder <radhermit@gentoo.org> sinfo-0.0.47.ebuild:
+  Add blocker against sys-cluster/slurm (bug #437476 by Diego Elio Pettenò).
 
   08 Oct 2012; Tim Harder <radhermit@gentoo.org> -sinfo-0.0.46.ebuild:
   Remove old.
