--- a/net-wireless/ubertooth/ChangeLog
+++ b/net-wireless/ubertooth/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/ubertooth
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/ubertooth/ChangeLog,v 1.12 2012/10/08 20:16:51 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/ubertooth/ChangeLog,v 1.13 2012/10/08 21:05:43 zerochaos Exp $
+
+  08 Oct 2012; Rick Farina <zerochaos@gentoo.org> ubertooth-2012.10.1.ebuild,
+  ubertooth-9999.ebuild:
+  fix mistake during distutils conversion
 
 *ubertooth-2012.10.1 (08 Oct 2012)
 
