--- a/net-libs/libnfnetlink/ChangeLog
+++ b/net-libs/libnfnetlink/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/libnfnetlink
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libnfnetlink/ChangeLog,v 1.49 2012/09/02 18:51:43 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libnfnetlink/ChangeLog,v 1.50 2012/10/08 22:55:05 radhermit Exp $
+
+*libnfnetlink-1.0.1 (08 Oct 2012)
+
+  08 Oct 2012; Tim Harder <radhermit@gentoo.org> +libnfnetlink-1.0.1.ebuild:
+  Version bump.
 
   02 Sep 2012; Raúl Porcel <armin76@gentoo.org> libnfnetlink-1.0.0-r1.ebuild:
   alpha/ia64/m68k/s390/sh/sparc stable wrt #419269
