--- a/dev-lang/v8/ChangeLog
+++ b/dev-lang/v8/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/v8
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.243 2012/09/28 06:46:12 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.244 2012/10/09 01:20:41 floppym Exp $
+
+*v8-3.12.19.15 (09 Oct 2012)
+
+  09 Oct 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.12.19.15.ebuild:
+  Stable channel bump.
 
 *v8-3.13.7.2 (28 Sep 2012)
 
