--- a/www-client/chromium/ChangeLog
+++ b/www-client/chromium/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.728 2012/10/08 19:06:43 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.729 2012/10/09 01:20:46 floppym Exp $
+
+*chromium-22.0.1229.92 (09 Oct 2012)
+
+  09 Oct 2012; Mike Gilbert <floppym@gentoo.org> +chromium-22.0.1229.92.ebuild:
+  Stable channel bump.
 
   08 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   chromium-22.0.1229.79.ebuild, chromium-22.0.1229.91.ebuild:
